src/test/ui/target-feature/invalid-attribute.stderr
error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:17:1
   |
LL | #[target_feature = "+sse2"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[target_feature(enable = "name")]`

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:34:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | mod another {}
   | -------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:39:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const FOO: usize = 7;
   | --------------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:44:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct Foo;
   | ----------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:49:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | enum Bar {}
   | ----------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:54:1
   |
LL |   #[target_feature(enable = "sse2")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / union Qux {
LL | |
LL | |     f1: u16,
LL | |     f2: u16,
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:62:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | trait Baz {}
   | ------------ not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:85:5
   |
LL |       #[target_feature(enable = "sse2")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | /     unsafe {
LL | |         foo();
LL | |         bar();
LL | |     }
   | |_____- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:93:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     || {};
   |     ----- not a function definition

error: the feature named `foo` is not valid for this target
  --> $DIR/invalid-attribute.rs:19:18
   |
LL | #[target_feature(enable = "foo")]
   |                  ^^^^^^^^^^^^^^ `foo` is not valid for this target

error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:22:18
   |
LL | #[target_feature(bar)]
   |                  ^^^ help: must be of the form: `enable = ".."`

error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:24:18
   |
LL | #[target_feature(disable = "baz")]
   |                  ^^^^^^^^^^^^^^^ help: must be of the form: `enable = ".."`

error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/invalid-attribute.rs:28:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn bar() {}
   | -------- not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: cannot use `#[inline(always)]` with `#[target_feature]`
  --> $DIR/invalid-attribute.rs:67:1
   |
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^

error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/invalid-attribute.rs:77:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     fn foo() {}
   |     -------- not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0658`.
